Fixed dark mode styling errors, and fixed removing favorites on logout

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -64,6 +64,14 @@
     padding: 20px;
 }
 
+.landing-page .all-restaurants-title {
+    color: #000;
+}
+
+body.dark .landing-page .all-restaurants-title {
+    color: #000;
+}
+
 .restaurant-card {
     background-color: #fff;
     border-radius: 12px;
